--- a/ComfyUI_+_WAS_Node_Suite.ipynb
+++ b/ComfyUI_+_WAS_Node_Suite.ipynb
@@ -16,7 +16,7 @@
         "id": "aaaaaaaaaa"
       },
       "source": [
-        "# ComfyUI + WAS Node Suite\n",
+        "# <font color=\"#0497e0\">**Comfy**</font>UI + <font color=\"#4684a3\">**WAS** Node Suite</font> &nbsp; [![Hits](https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fcolab.research.google.com%2Fgithub%2FWASasquatch%2Fcomfyui-colab-was-node-suite%2Fblob%2Fmain%2FComfyUI_%252B_WAS_Node_Suite.ipynb&count_bg=%23EAAC00&title_bg=%233092C6&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false)](https://hits.seeyoufarm.com)\n",
         "A version of ComfyUI Colab with WAS Node Suite installatoin."
       ]
     },
@@ -29,7 +29,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Environment Setup\n",
+        "#@title <font color=\"orange\" size=\"5\">Environment Setup</font>\n",
         "\n",
         "from pathlib import Path\n",
         "\n",
@@ -66,7 +66,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Update WAS Node Suite\n",
+        "#@title <font color=\"orange\" size=\"5\">Update WAS Node Suite</font>\n",
         "%cd /content/ComfyUI/custom_nodes/was-node-suite-comfyui\n",
         "!git pull\n",
         "%cd /content/ComfyUI"
@@ -96,7 +96,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Download Models (Expand for Optional Downloads)\n",
+        "#@title <font color=\"orange\" size=\"5\">Download Models</font> (Expand for Optional Downloads)\n",
         "\n",
         "# SD1.5\n",
         "!wget -c https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.ckpt -P ./models/checkpoints/\n",
@@ -199,7 +199,7 @@
         "id": "gggggggggg"
       },
       "source": [
-        "### Run ComfyUI with colab iframe (use only in case the previous way with localtunnel doesn't work)\n",
+        "### Run ComfyUI with colab iframe ***(use only in case the previous way with localtunnel doesn't work)***\n",
         "\n",
         "You should see the ui appear in an iframe. If you get a 403 error, it's your firefox settings or an extension that's messing things up.\n",
         "\n",
@@ -217,7 +217,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title ComfyUI iFrame\n",
+        "#@title <font size=\"5\" color=\"orange\">ComfyUI iFrame</font>\n",
         "import threading\n",
         "import time\n",
         "import socket\n",
